js tasks commit

--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 
         <tr bgcolor = 'cyan' ,  align="center">
             <td width="100">TASK 1</td>
-            <td width="100"><a href="./html/task1html.html">LINK2</a></td>
+            <td width="100"><a href="./html/task1html.html">LINK1</a></td>
          </tr>
 
          <tr bgcolor = 'cyan' ,  align="center">
             <td width="100">TASK 2</td>
-            <td width="100"><a href="./html/task2html.html">LINK3</a></td>
+            <td width="100"><a href="./html/task2html.html">LINK2</a></td>
          </tr>
 
          <tr bgcolor = 'cyan' ,  align="center">
             <td width="100">TASK 3</td>
-            <td width="100"><a href="./html/task3.html">LINK4</a></td>
+            <td width="100"><a href="./html/task3.html">LINK3</a></td>
          </tr>
 
          <tr bgcolor = 'cyan' ,  align="center">
             <td width="100">TASK 4</td>
-            <td width="100"><a href="./html/task4html.html">LINK5</a></td>
+            <td width="100"><a href="./html/task4html.html">LINK4</a></td>
          </tr>
 
          <tr bgcolor = 'cyan' ,  align="center">
-            <td width="100">TASK 4</td>
-            <td width="100"><a href="./html/task5html.html">LINK6</a></td>
+            <td width="100">TASK 5</td>
+            <td width="100"><a href="./html/task5html.html">LINK5</a></td>
          </tr>
 
     </table>
@@ -129,6 +129,58 @@
          <tr bgcolor = 'cyan' ,  align="center">
             <td width="100">TASK 6</td>
             <td width="100"><a href="./bootstrap/task6bs.html">LINK6</a></td>
+         </tr>
+
+    </table>
+
+
+
+    <div><h2>JAVASCRIPT TASKS </h2></div>
+
+    <table class="u" , width = 700>
+        <tr bgcolor = 'cyan'>
+            <th width="100">TASK</th>
+            <th width="100">LINKS</th>
+         </tr>
+
+        <tr bgcolor = 'cyan' ,  align="center">
+            <td width="100">TASK 1</td>
+            <td width="100"><a href="./javascript/task1js.html">LINK1</a></td>
+         </tr>
+
+         <tr bgcolor = 'cyan' ,  align="center">
+            <td width="100">TASK 2</td>
+            <td width="100"><a href="./javascript/task2js.html">LINK2</a></td>
+         </tr>
+
+         <tr bgcolor = 'cyan' ,  align="center">
+            <td width="100">TASK 3</td>
+            <td width="100"><a href="./javascript/task3js.html">LINK3</a></td>
+         </tr>
+
+         <tr bgcolor = 'cyan' ,  align="center">
+            <td width="100">TASK 4</td>
+            <td width="100"><a href="./javascript/task4js.html">LINK4</a></td>
+         </tr>
+
+         <tr bgcolor = 'cyan' ,  align="center">
+            <td width="100">TASK 5</td>
+            <td width="100"><a href="./javascript/task5js.html">LINK5</a></td>
+         </tr>
+
+         <tr bgcolor = 'cyan' ,  align="center">
+            <td width="100">TASK 6</td>
+            <td width="100"><a href="./javascript/task6js.html">LINK6</a></td>
+         </tr>
+
+         <tr bgcolor = 'cyan' ,  align="center">
+            <td width="100">TASK 7</td>
+            <td width="100"><a href="./javascript/task7js.html">LINK7</a></td>
+         </tr>
+
+         <tr bgcolor = 'cyan' ,  align="center">
+            <td width="100">TASK 8</td>
+            <td width="100"><a href="./javascript/task8js.html">LINK8</a></td>
          </tr>
 
     </table>
